--- a/comp1238.md
+++ b/comp1238.md
@@ -1,1 +1,135 @@
+## Week 1 - History
 
+- Evolution of Writing
+    - Sumerian Language: Used syllabic writing.
+    - Epic of Gilgamesh: Early literature (~4,000 years ago).
+    - Multilingual Inscriptions: Example of trilingual inscriptions (Old Persian, Elamite, Babylonian)
+
+- Number Systems
+
+    - Babylonian Numerals:
+        - System using two types of wedges, one means 10 the other means 1.
+        - Numbers up to 59 are jsut sum of the two types wedges.
+        - Then positional base-60 system similar to modern base-10.
+
+    - Other Systems:
+        - Egyptian: Symbols for powers of 10.
+        - Roman: Subtractive notation (e.g., MCM = 1900).
+
+ 
+- Key Terminology
+
+    - Typeface: Design of letters.
+    - Font: Collection of typefaces.
+    - Serif/Sans Serif: Fonts with/without decorative strokes.
+    - Uppercase/Lowercase: Originated from physical storage cases.
+
+
+## Week 2 - Bits and Bytes
+
+### Key Concepts
+
+- Binary System
+
+    - Bit: Short for binary digit, represents one of two states (0 or 1).
+    - Byte: Group of 8 bits.
+    - Binary Numbers: Numbers represented using base 2.
+
+- Memory Types
+
+    - Volatile Memory: Loses data when power is off (e.g., RAM).
+    - Non-Volatile Memory: Retains data without power (e.g., SSD, HDD).
+
+- Number Representation
+
+    - Unsigned Numbers: Range from 0 to 255 for 8 bits.
+    - Signed Numbers: Range from -128 to 127 for 8 bits.
+    - Fractional Numbers: Represented using scientific notation with two integers.
+
+- Text Representation
+
+    - ASCII Table: Maps numbers to characters (e.g., 65 for 'A').
+    - Control Codes: Non-printable characters for control functions (e.g., newline).
+
+- File Types
+
+    - Text Files: Interpreted as characters using ASCII.
+    - Binary Files: Not intended to be read as text.
+
+
+## Week 3 - Text Structure
+
+- Markup Languages
+
+    - Markdown:
+        - Simple syntax for formatting.
+        - Titles: # Title, ## Subtitle
+        - Italic: _italic\_
+        - Bold: **bold\*\*
+        - Lists: * item or - item
+        - Rendering: Conversion from raw text to formatted view.
+
+    - HTML:
+        - More verbose than Markdown.
+        - Tags: <ul\>, <li\>, <p\>, <strong\>, <h1\>, <h2\>, <h3\>
+
+- Unicode
+
+    - Similar to ASCII - assigns numbers to characters, but allows for much larger numbers and therefore more characters.
+    - While in ASCII the numbers are called "ASCII codes", in unicode the name used is "Unicode codepoints"
+    - In contrast to ASCII there are multiple different ways of converting the codepoints into a binary representation:
+        - UTF-32 simply uses 4 bytes to store the codepoint number of in binary, but this wastes a lot of space because most bytes end up being filled with zeroes.
+        - UTF-8 is identical to ASCII for all the basic characters but uses multiple bytes for codepoints above 127. UTF-8 is by far the most popular encoding on the internet.
+    - Unicode codepoints are usually written as hex number with prefix U+ for example U+21AA is the codepoint for this character: ↪
+    - Note that the binary representation for this codepoint will be different depending on which encoding is used, but in most cases we use UTF-8.
+
+
+## Week 4 - Keyboards and Editors
+
+- Keyboard Mastery
+
+    - Importance: Efficient typing reduces cognitive load.
+    - Types:
+        - Standard 104-key layout.
+        - Variants like split, vertical, and ortholinear keyboards.
+    - Layouts:
+        - QWERTY, AZERTY, Dvorak.
+    - Modifier Keys: modify the behavior of other keys - Control, Shift, Alt etc.
+    - Touch Typing: Encouraged for efficiency and reduced fatigue.
+
+- Text Editors
+
+    - Types:
+        - Word Processors (e.g., Microsoft Word) vs. Text Editors (e.g., Notepad).
+    - Popular Editors:
+        - Vim: Command-line based, requires learning commands.
+            - Exit command: :q!
+        - Visual Studio Code (VS Code): Widely used, feature-rich.
+            - Extensions and themes available.
+    - IDEs: Integrated Development Environments like WebStorm, Pycharm.
+
+## Week 5 - CLI
+
+- Modern CLI Usage  
+  - **Advantages**:  
+    - Some functionalities are only available via CLI.  
+    - Faster for certain tasks compared to graphical interfaces.  
+    - Easier automation through scripting.  
+    - Efficient for remote work with low bandwidth requirements.  
+    - Minimal resource usage on computers.  
+
+- Basic CLI Commands  
+  - **Navigation and File Management**:  
+    - `ls`: List files in a directory.  
+    - `cd`: Change directory.  
+    - `pwd`: Print working directory.  
+    - `cat`: Display file contents.  
+    - `less`: View file contents interactively.  
+    - `cp`: Copy files.  
+    - `mv`: Move files.  
+    - `mkdir`: Create a directory.  
+    - `ping`: Test network connectivity.
+   
+- Advanced Commands:  
+  - `grep`: Search text using patterns.  
+  - Redirection and piping: Direct output to files or other commands.  
